--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-*.DS_Store
+.DS_Store
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -124,4 +124,3 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
